# Elderly_Fall_Detection_System

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  main.py  people_database.db  pyproject.toml
alerts/: telegram_alert_bot.py
app/: fall_and_face_tracker.py
app/alerts/: telegram_alert_bot.py
app/core/: config.py
app/database/: db_manager.py
app/modules/: face_recognition.py  fall_detection.py  person_tracker.py
app/utils/: frame_visualizer.py  video_processor.py
fall_detection/: fall_det.py
static/: script.js
templates/: index.html  video.html
