[tool.poetry]
name = "elderly-fall-detection-system"
version = "0.1.0"
description = ""
authors = ["Franco Cuya <francocuya13@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "=3.11"
requests = "^2.32.4"
flask = "^3.1.1"
python-dotenv = "^1.1.1"
opencv-python = "^4.12.0.88"
ultralytics = "^8.3.177"
torch = { version = "=2.8.0+cu126", source = "pytorch" }
torchvision = { version = "=0.23.0+cu126", source = "pytorch" }
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
